# AVR

./: CMakeLists.txt
CNC/: CMakeLists.txt  CNC.cpp  CNC.h  GCListener.h  Modement.h  Movement.h  Place.cpp  Place.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  PositionInterface.h  Tool.cpp  Tool.h
Nano/: Atmega328p.cpp  Atmega328p.h  Base.cpp  Base.h  Bus.h  CMakeLists.txt  Callable.h  Delay.h  ExternalInterrupt.h  Nano.h  PWD.h  PWM.h  Pin.h  Port.h  SoftPWM.h  Timer.cpp  Timer.h  Timer0.cpp  Timer0.h  UART.h
PCB/: CMakeLists.txt  main.cpp
TestSubProject/: CMakeLists.txt  ForJulie.cpp  m.hex  main.cpp
Timer/: CMakeLists.txt  Timer.cpp
Utils/: Base.cpp  Base.h  BasePin.cpp  BasePin.h  Buffer.h  Bus.h  CMakeLists.txt  Callable.cpp  Callable.h  Conversion.cpp  Conversion.h  GetType.h  Pin.cpp  Pin.h  Port.h  String.h  Utils.cpp  Utils.h  conversion.cpp  conversion.h
